--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@ body {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: .25rem;
+  padding: 0.25rem;
 }
 
 .nav li.active {
@@ -48,4 +48,29 @@ body {
 
 .nav li:hover {
   background-color: #777;
+}
+
+.inc_container {
+  display: 'flex';
+  flex-direction: 'row';
+  justify-content: 'space-between';
+  align-items: 'center';
+  justify-self: 'center';
+  width: '10rem';
+  font-size: '4em';
+}
+
+.inc_button {
+  display: 'flex';
+  flex-direction: 'row';
+  align-items: 'center';
+  justify-content: 'center';
+  background-color: 'lightblue';
+  color: 'white';
+  border: 'none';
+  border-radius: '20%';
+  cursor: 'pointer';
+  width: '2.5rem';
+  height: '2.5rem';
+  font-size: '0.8em';
 }
